--- a/main.css
+++ b/main.css
@@ -271,7 +271,7 @@ button.sticky{
     div.nav-wrap{
         a{
             font-size: 16px;
-            flex-grow: 1;
+            flex-grow: 0;
         }
     }
 }
@@ -291,5 +291,10 @@ button.sticky{
     }
     ul.nav a{
         padding: 15px 50px;
+    }
+}
+@media (min-width:720px) and (max-width:1000px ) {
+    ul.nav a{
+        padding: 18px 60px;
     }
 }
